# Casper-Sentinel-AI

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
apps/api/: package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: main.test.ts  main.ts
apps/api/src/features/reports/: file-report-repository.test.ts  file-report-repository.ts  in-memory-report-repository.test.ts  in-memory-report-repository.ts  report-factory.ts  routes.ts  types.ts
apps/api/src/features/screening/: analyze-transaction.test.ts  analyze-transaction.ts  routes.test.ts  routes.ts  schemas.ts
apps/dashboard/: package.json  tsconfig.json
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/app/: page.tsx
apps/dashboard/src/features/: sentinel-console.tsx  theme-toggle.tsx
apps/worker/: package.json  tsconfig.json
apps/worker/src/: main.test.ts  main.ts
contracts/risk-report-registry/: Cargo.toml
contracts/risk-report-registry/src/: lib.rs
docs/: casper-testnet-runbook.md  demo-script.md  extension-readiness.md  threat-model.md
docs/decisions/: 0001-architecture-stack.md
scripts/: deploy-casper-testnet.ps1
