[package]
name = "risk-report-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Casper Sentinel AI risk report registry contract domain."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
casper-contract = { version = "5.1.1", default-features = false }
casper-types = "6.1.0"
wee_alloc = "0.4.5"
